--- a/python/package/setup.py.in
+++ b/python/package/setup.py.in
@@ -11,7 +11,7 @@ setup(
     packages=['reaktoro', 'reaktoro.extensions'],
     package_data={
         'reaktoro': [
-            '${REAKTORO_PYTHON_MODULE_FILENAME}',
+            'reaktoro4py${PYTHON_MODULE_EXTENSION}',
             'reaktoro4py/*'
             '*.pyi',
         ],
